--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -31,12 +31,12 @@ body {
   border-top: 1px solid #e5e5e5;
 }
 
-/* Customize container */
+/* Customize container
 @media (min-width: 768px) {
   .container {
     max-width: 730px;
   }
-}
+}*/
 .container-narrow > hr {
   margin: 30px 0;
 }
@@ -76,4 +76,14 @@ body {
   .jumbotron {
     border-bottom: 0;
   }
+}
+.selected,{
+    border: 1px solid #af23c9; ;
+}
+.replyButtons,
+.replyMessage,
+.replySubject,
+.replyTo
+{
+    margin-bottom: 1%;
 }
